# raytracer

./: .gitignore
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/libtracer/: CMakeLists.txt
src/libtracer/include/trc/: Camera.h  DielectricMaterial.h  LambertianMaterial.h  Material.h  MetalMaterial.h  Precision.h  Random.h  Ray.h  Sphere.h  Surface.h  SurfaceList.h  Vec3.h
src/libtracer/src/: Sphere.cpp  SurfaceList.cpp  Vec3.cpp
src/libtracer/test/: Vec3TestSuite.h  test.cpp
